--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -4195,12 +4195,12 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="100" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SgA-58-Yhd">
                                         <rect key="frame" x="0.0" y="0.0" width="175" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="500" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p7R-gg-yFh">
                                         <rect key="frame" x="183" y="0.0" width="175" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -4230,9 +4230,9 @@
                                 </subviews>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="10" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2S4-84-a4M">
-                                <rect key="frame" x="16" y="262" width="175" height="34"/>
+                                <rect key="frame" x="16" y="262" width="145.33333333333334" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aad-8H-Qyn">
                                 <rect key="frame" x="172" y="450.33333333333331" width="82" height="40"/>
@@ -4295,8 +4295,14 @@
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="400" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLq-ez-tf7">
                                 <rect key="frame" x="199" y="262" width="175" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="руб" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11F-vU-8Gf">
+                                <rect key="frame" x="165.33333333333334" y="270" width="25.666666666666657" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ley-GR-VVm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -4305,9 +4311,11 @@
                             <constraint firstItem="Qxa-n9-hSB" firstAttribute="top" secondItem="8pG-yw-6ap" secondAttribute="bottom" constant="4" id="17b-Ym-6Vd"/>
                             <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="jLq-ez-tf7" secondAttribute="trailing" constant="16" id="4fQ-GW-TfF"/>
                             <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="PqT-AK-aMC" secondAttribute="trailing" constant="16" id="4sJ-b1-XFU"/>
+                            <constraint firstItem="11F-vU-8Gf" firstAttribute="trailing" secondItem="SgA-58-Yhd" secondAttribute="trailing" id="5fW-76-zCT"/>
                             <constraint firstItem="jSL-Hq-oGd" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="7b9-3B-Fn1"/>
                             <constraint firstItem="2S4-84-a4M" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="CGN-sU-4fm"/>
                             <constraint firstItem="PqT-AK-aMC" firstAttribute="leading" secondItem="aad-8H-Qyn" secondAttribute="trailing" constant="16" id="CNJ-Na-BVi"/>
+                            <constraint firstItem="11F-vU-8Gf" firstAttribute="leading" secondItem="2S4-84-a4M" secondAttribute="trailing" constant="4" id="E3w-pX-voA"/>
                             <constraint firstItem="2S4-84-a4M" firstAttribute="top" secondItem="HZg-YW-obG" secondAttribute="bottom" constant="4" id="Iax-fk-THq"/>
                             <constraint firstItem="duq-hY-sAj" firstAttribute="top" secondItem="Ley-GR-VVm" secondAttribute="top" constant="32" id="JPD-6L-kb2"/>
                             <constraint firstItem="AN4-GZ-Tch" firstAttribute="top" secondItem="qSx-96-FLw" secondAttribute="bottom" constant="16" id="JWl-jW-Unk"/>
@@ -4315,20 +4323,20 @@
                             <constraint firstItem="HZg-YW-obG" firstAttribute="leading" secondItem="2S4-84-a4M" secondAttribute="leading" constant="2" id="P9w-Rh-dhS"/>
                             <constraint firstItem="HZg-YW-obG" firstAttribute="top" secondItem="qSx-96-FLw" secondAttribute="bottom" constant="16" id="PN8-8K-1RR"/>
                             <constraint firstItem="PqT-AK-aMC" firstAttribute="top" secondItem="jLq-ez-tf7" secondAttribute="bottom" constant="154.33000000000001" id="Pp1-eq-keY"/>
-                            <constraint firstItem="jLq-ez-tf7" firstAttribute="leading" secondItem="2S4-84-a4M" secondAttribute="trailing" constant="8" id="PrD-Re-p9R"/>
                             <constraint firstItem="jSL-Hq-oGd" firstAttribute="top" secondItem="Qxa-n9-hSB" secondAttribute="bottom" constant="16" id="R21-n9-NDp"/>
                             <constraint firstItem="JRm-UI-daw" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="SwU-gS-lNy"/>
                             <constraint firstItem="jLq-ez-tf7" firstAttribute="top" secondItem="AN4-GZ-Tch" secondAttribute="bottom" constant="4" id="TSP-3o-Qsz"/>
+                            <constraint firstItem="11F-vU-8Gf" firstAttribute="centerY" secondItem="2S4-84-a4M" secondAttribute="centerY" id="TvH-DR-Ri2"/>
                             <constraint firstItem="JRm-UI-daw" firstAttribute="top" secondItem="2S4-84-a4M" secondAttribute="bottom" constant="16" id="aSI-Fe-loG"/>
                             <constraint firstItem="ifQ-VL-dUd" firstAttribute="top" secondItem="JRm-UI-daw" secondAttribute="bottom" constant="16" id="bvf-Q0-hfQ"/>
                             <constraint firstItem="8pG-yw-6ap" firstAttribute="top" secondItem="Ley-GR-VVm" secondAttribute="top" constant="32" id="dFa-Bc-ens"/>
+                            <constraint firstItem="jLq-ez-tf7" firstAttribute="leading" secondItem="11F-vU-8Gf" secondAttribute="trailing" constant="8" id="eir-jX-Ml1"/>
                             <constraint firstItem="aad-8H-Qyn" firstAttribute="centerY" secondItem="PqT-AK-aMC" secondAttribute="centerY" id="hdg-xJ-KU5"/>
                             <constraint firstItem="Qxa-n9-hSB" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="htU-xR-Y4p"/>
                             <constraint firstItem="AN4-GZ-Tch" firstAttribute="leading" secondItem="jLq-ez-tf7" secondAttribute="leading" constant="2" id="kxa-dT-kWQ"/>
                             <constraint firstItem="Qxa-n9-hSB" firstAttribute="top" secondItem="duq-hY-sAj" secondAttribute="bottom" constant="4" id="m5u-xN-wHn"/>
                             <constraint firstItem="qSx-96-FLw" firstAttribute="top" secondItem="jSL-Hq-oGd" secondAttribute="bottom" constant="16" id="r6f-wo-w3n"/>
                             <constraint firstItem="ifQ-VL-dUd" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="seh-hq-rkh"/>
-                            <constraint firstItem="2S4-84-a4M" firstAttribute="trailing" secondItem="SgA-58-Yhd" secondAttribute="trailing" id="tMc-Hi-2yJ"/>
                             <constraint firstItem="8pG-yw-6ap" firstAttribute="leading" secondItem="p7R-gg-yFh" secondAttribute="leading" constant="2" id="ufI-Ls-cqo"/>
                             <constraint firstItem="qSx-96-FLw" firstAttribute="leading" secondItem="Ley-GR-VVm" secondAttribute="leading" constant="16" id="xL0-qb-KRf"/>
                             <constraint firstItem="Ley-GR-VVm" firstAttribute="trailing" secondItem="qSx-96-FLw" secondAttribute="trailing" constant="16" id="zgB-ND-QXU"/>
@@ -4342,6 +4350,7 @@
                         <outlet property="inPercentsButton" destination="wzo-SP-ddM" id="biO-7J-Wxc"/>
                         <outlet property="inRublesButton" destination="hoJ-lk-hir" id="N7e-h9-DUf"/>
                         <outlet property="nacenkaTextField" destination="2S4-84-a4M" id="LrX-DA-svA"/>
+                        <outlet property="nacenkaTrailLabel" destination="11F-vU-8Gf" id="cxK-E0-CBH"/>
                         <outlet property="otTextField" destination="SgA-58-Yhd" id="UCe-Jj-fKv"/>
                         <outlet property="otmenaButton" destination="aad-8H-Qyn" id="yKH-4C-Jt6"/>
                         <outlet property="picker" destination="ifQ-VL-dUd" id="V0j-Ln-Drj"/>
